name: blockapps-data
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.1

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , strato-conf
                 , merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 --, leveldb-haskell
                 , mtl
                 , nibblestring
                 , persistent
                 , persistent-template
                 , persistent-postgresql
                 , resourcet
                 , time
                 , transformers
                 , ansi-wl-pprint
                 , monad-logger
                 , aeson
                 , text
                 , path-pieces
                 , ethereum-encryption
                 , blockapps-util
                 , esqueleto
                 , crypto-pubkey-types
      		 
    exposed-modules: 
                   Blockchain.Data.Address
                   Blockchain.Data.Code
                   Blockchain.Data.DataDefs
                   Blockchain.Data.PersistTypes
                   Blockchain.Data.Transaction
    ghc-options: -Wall -O2
    extensions: TemplateHaskell
    buildable: True
    hs-source-dirs: src

--executable strato-setup
--    default-language: Haskell98
--    ghc-options: -Wall -O2
--    build-depends: 
--                   base >= 4 && < 5
--                 , blockapps-data
--                 , blockapps-util
--                 , hflags
--    buildable: True
--    main-is: Main.hs
--    hs-source-dirs: exec_src
