name: blockapps-data
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.1


executable strato-setup
    default-language: Haskell98
    ghc-options: -Wall -O2 -lstdc++ -lleveldb
    build-depends: 
                   base >= 4 && < 5
                 , blockapps-data
                 --, strato-setup
                 --, hflags
    buildable: True
    main-is: Main.hs
    hs-source-dirs: exec_src

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , strato-conf
                 , merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , mtl
                 , nibblestring
                 , persistent
                 , persistent-template
                 , persistent-postgresql
                 , resourcet
                 , time
                 , transformers
                 , ansi-wl-pprint
                 , monad-logger
                 , aeson
                 , text
                 , path-pieces
                 , ethereum-encryption
                 , blockapps-util
                 , esqueleto
                 , crypto-pubkey-types
           
    exposed-modules: 
                   Blockchain.Constants
                   Blockchain.Data.AddressStateDB
                   Blockchain.Data.BlockDB
                   Blockchain.Data.DiffDB
                   Blockchain.Data.Extra
                   Blockchain.Data.GenesisBlock
                   Blockchain.Data.GenesisInfo
                   Blockchain.Data.Json
                   Blockchain.Data.Log
                   Blockchain.Data.LogDB
                   Blockchain.Data.UnprocessedDB
                   Blockchain.Data.TransactionReceipt
                   Blockchain.Data.TransactionResult
                   Blockchain.DBM
                   Blockchain.DB.BlockDB
                   Blockchain.DB.CodeDB
                   Blockchain.DB.DetailsDB
                   Blockchain.DB.HashDB
                   Blockchain.DB.SQLDB   
                   Blockchain.DB.StateDB
                   Blockchain.DB.StorageDB
                   Blockchain.ExtDBs
                   Blockchain.Setup
                   Blockchain.Data.Address
                   Blockchain.Data.Code
                   Blockchain.Data.DataDefs
                   Blockchain.Data.PersistTypes
                   Blockchain.Data.RawTransaction
                   Blockchain.Data.Transaction
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: src
    extensions: TemplateHaskell
